# Desktop-Organizer

./: .gitignore  LICENSE  README.md  build-final.bat  index.html  package-lock.json  package.json  run-app.bat  vite.config.ts
scripts/: generate-icons.mjs
src/: App.css  App.tsx  index.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
