[package]
name = "desktop-organizer"
version = "0.1.0"
description = "Desktop Organizer - Tauri v2 App"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_organizer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
window-vibrancy = "0.7.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
debug = false
panic = "abort"
